<resources>
    <string name="app_name">UMIK</string>
    <string name="sensor_list_activity_bar_string">Sensor list</string>
    <string name="empty_sensor_list_string">No sensors added yet</string>
    <string name="add_new_sensor_string">Add new sensor</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_location">Location</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="notification_title">Sensor id title</string>
    <string name="notification_text">BLE data received</string>

    <string name="sensor_list_title">Sensors</string>
    <string name="submit_button">Submit</string>
    <string name="mac_address">MAC address</string>

    <string name="confirm_sensor_add">Sensor added.</string>
    <string name="frequency_text">Frequency</string>
    <string name="data_send_freq">Frequency</string>
    <string name="no_sensor_toast">No sensors. Please add sensor first.</string>
    <string name="navigation_header_main">Leak detector</string>
    <string name="small_leak_range">Small leak range</string>
    <string name="large_leak_range">Large leak range</string>

    <string name="send_freq_button">Send</string>
    <string name="send_leak_range_button">Send</string>
    <string name="reset_button">Reset</string>
    <string name="get_info_button">Get current config</string>
    <string name="current_config_text">Current configuration</string>
    <string name="ok_button">OK</string>
</resources>
