<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="2">

        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_freq_wave"/>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="4"
                android:textSize="15dp"
                android:text="@string/frequency_text"/>

            <EditText
                android:id="@+id/freq_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/data_send_freq"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/send_freq_button"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/send_freq_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_water_drop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="4"
                android:textSize="15dp"
                android:text="@string/small_leak_range"/>

            <EditText
                android:id="@+id/small_leak_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/small_leak_range"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="4"
                android:textSize="15dp"
                android:text="@string/large_leak_range"/>

            <EditText
                android:id="@+id/large_leak_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/large_leak_range"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/send_leak_range_button"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:text="@string/send_leak_range_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1.2">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/get_info_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:text="@string/get_info_button" />
    </LinearLayout>
</LinearLayout>
